[package]
name = "webapp"
version = "0.1.0"
authors = ["hg.king <hg_king@external.mckinsey.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "multi_thread_worker"
path = "src/bin/native_worker.rs"

[dependencies]
log = "0.4"
wasm-logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
yew = "0.15"
wasm-bindgen = "0.2.62"
web-sys = "0.3.39"
